[package]
name = "simpleproxy"
version = "0.2.5"
edition = "2021"
authors = ["Tobias de Bruijn <t.debruijn@array21.dev"]
license = "MIT OR Apache-2.0"
description = "A simple and lightweight reverse proxy"

[dependencies]
actix-web = { version = "4.1.0", default-features = false, features = ["rustls", "macros"] }
anyhow = "1.0.62"
futures-util = "0.3.23"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
rustls = "0.20.6"
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-actix-web = "0.6.0"
tracing-subscriber = "0.3.15"
actix-tls = { version = "3.0.3", features = ["rustls"] }
rustls-pemfile = "1.0.1"
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
thiserror = "1.0.32"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = false }
section = "main"

[profile.release]
strip = true
